Fix page overflow bug in Chrome #177953214

--- a/app/assets/stylesheets/templates/_bulk-action-form.scss
+++ b/app/assets/stylesheets/templates/_bulk-action-form.scss
@@ -12,6 +12,7 @@
 
 .bulk-action-checkbox {
   margin-left: 1rem;
+  position: relative;
 }
 
 html[lang="en"] {
